# itantana-fototra

./: Cargo.toml  README.md  config.toml  deny.toml
itantana-fototra/: Cargo.toml  deny.toml  secret.toml
itantana-fototra/src/: app.rs  c_registry.rs  configuration.rs  dtos.rs  lib.rs  model.rs  plugin.rs  registry.rs  repository.rs  traits.rs
itantana-fototra/src/adapters/repository/in_memory/: user_internet_repository.rs  user_password_policy_repository.rs  user_password_repository.rs
itantana-fototra/src/dtos/: find_request.rs  find_response.rs  user.rs
itantana-fototra/src/dtos/user/: user_find_request_filter.rs  user_permission.rs  user_update_request.rs
itantana-fototra/src/dtos/user/user_permission/: user_permission_add_request.rs  user_permission_delete_request.rs
itantana-fototra/src/dtos/user_internet/: user_internet_find_request_filter.rs
itantana-fototra/src/model/: email_address.rs  permission.rs  user_internet.rs  user_permission.rs
itantana-fototra/src/model/password/: password_level.rs
itantana-fototra/src/model/user/: error.rs  name.rs
itantana-fototra/src/model/user_internet/: error.rs
itantana-fototra/src/model/user_password/: error.rs  user_password_policy.rs
itantana-fototra/src/model/user_permission/: error.rs
itantana-fototra/src/repository/: permission_repository.rs  user_password_repository.rs  user_permission_repository.rs  user_repository.rs
itantana-fototra/src/security/: error.rs
itantana-fototra/src/service/: user.rs  user_internet.rs  user_password.rs  user_permission.rs
itantana-fototra/src/traits/: find_option_trait.rs  find_result_trait.rs  permission.rs  user.rs  user_internet.rs
itantana-fototra/src/traits/user/: user_initialize_trait.rs  user_permission.rs
itantana-fototra/src/traits/user/user_permission/: user_permission_repository_trait.rs
itantana-fototra/src/traits/user_internet/: user_internet_repository_trait.rs
itantana-in-memory-db-plugin/: Cargo.toml
itantana-in-memory-db-plugin/src/: lib.rs  permission_repository.rs  user_internet_repository.rs  user_password_policy_repository.rs  user_password_repository.rs  user_permission_repository.rs  user_repository.rs
src/: adapters.rs  configuration.rs  lib.rs  runtime.rs  security.rs  service.rs
src/adapters/repository/: in_memory.rs
src/dtos/: error.rs  user_internet.rs  user_password.rs
src/dtos/error/: find_request_error.rs
src/dtos/user/: user_add_request.rs  user_delete_request.rs
src/dtos/user_internet/: user_internet_add_request.rs  user_internet_delete_request.rs
src/dtos/user_password/: user_password_add_request.rs
src/dtos/user_permission/: user_permission_add_request.rs  user_permission_delete_request.rs  user_permission_find_request_filter.rs
src/model/: email_address.rs  password.rs  service_account.rs  user.rs  user_password.rs
src/model/password/: password_level.rs
src/model/permission/: error.rs
src/repository/: user_internet_repository.rs  user_password_policy_repository.rs
src/security/: authorizable.rs
src/service/: error.rs  user.rs  user_internet.rs  user_password.rs  user_permission.rs
src/traits/: adapter_loader_trait.rs  authentication_trait.rs  authorization_trait.rs  find_request_trait.rs  initialize_trait.rs  repository_trait.rs  user_password.rs  user_permission.rs
src/traits/permission/: permission_repository_trait.rs
tests/: Cargo.toml  build.rs.bak  integration.rs  user.rs
tests/src/: main.rs  user.rs
(+11 files in other folders)
