[package]
name = "itantana-fototra"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
keywords = ["itantana"]
repository = "https://github.com/itantana/itantana-fototra"
authors = ["Falihery RANDRIANASOLO <falihery.randrianasolo@gmail.com>"]
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.100"
argon2 = { version = "0.5.3", features = ["std"] }
chrono = { version = "0.4.41", features = ["serde"] }
regex = "1.12.1"
serde = { version = "1.0.219", features = ["derive"] }
serde-toml-merge = "0.3.11"
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["macros", "sync", "rt", "rt-multi-thread"] }
toml = "0.9.5"
uuid = { version = "1.18.1", features = ["serde", "v4"] }

[[test]]
name = "integration"
path = "tests/integration.rs"
