[workspace]
resolver = "3"
members = [ "itantana-fototra", "itantana-in-memory-db-plugin","tests"]

[workspace.package]
publish = false
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Falihery RANDRIANASOLO <falihery.randrianasolo@gmail.com>"]
license = "MIT OR Apache-2.0"
target-directory = "/custom/path/target"