[package]
name = "itantana-fototra"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
keywords = ["itantana"]
authors.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.100"
argon2 = { version = "0.5.3", features = ["std"] }
chrono = { version = "0.4.41", features = ["serde"] }
fancy-regex = "0.16.2"
futures = "0.3.31"
libloading = "0.8.9"
serde = { version = "1.0.219", features = ["derive"] }
serde-toml-merge = "0.3.11"
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["macros", "sync", "rt", "rt-multi-thread"] }
toml = "0.9.5"
uuid = { version = "1.18.1", features = ["serde", "v7"] }

[lib]
name = "fototra"
crate-type = ["cdylib", "rlib"]

# [[test]]
# name = "integration"
# path = "tests/integration.rs"

